# litebox

./: Cargo.toml
dev_tools/lock_viewer/: server.py
dev_tools/lock_viewer/static/js/: app.js
litebox/: Cargo.toml
litebox/src/event/: observer.rs  polling.rs  wait.rs
litebox/src/fd/: mod.rs
litebox/src/fs/: backend.rs  composer.rs  devices.rs  errors.rs  inode_allocator.rs  mod.rs  resolver.rs  tests.rs
litebox/src/fs/nine_p/: mod.rs
litebox/src/mm/: mod.rs
litebox/src/net/: local_ports.rs  mod.rs  socket_channel.rs
litebox/src/platform/: loom_model.rs  mock.rs  mod.rs
litebox/src/sync/: condvar.rs  futex.rs  mutex.rs  rwlock.rs
litebox/src/utilities/: anymap.rs  loan_list.rs
litebox_common_linux/src/: lib.rs  mm.rs
litebox_common_optee/src/: lib.rs
litebox_platform_linux_kernel/: Cargo.toml
litebox_platform_linux_kernel/src/: lib.rs
litebox_platform_linux_kernel/src/host/snp/: snp_impl.rs
litebox_platform_linux_userland/: Cargo.toml
litebox_platform_linux_userland/src/: lib.rs
litebox_platform_lvbs/: Cargo.toml
litebox_platform_lvbs/src/: lib.rs
litebox_platform_lvbs/src/arch/x86/: ioport.rs
litebox_platform_lvbs/src/arch/x86/mm/: paging.rs
litebox_platform_lvbs/src/mshv/: hvcall_mm.rs  mem_integrity.rs  mod.rs  vsm.rs  vsm_intercept.rs  vtl1_mem_layout.rs
litebox_platform_multiplex/: Cargo.toml
litebox_runner_linux_userland/src/: lib.rs
litebox_runner_linux_userland/tests/: alarm.c  faccessat.c  faccessat2.c  helpers.h  mkdirat.c  recvmsg.c  run.rs  sendfile.c
litebox_runner_lvbs/: Cargo.toml
litebox_runner_lvbs/src/: lib.rs  main.rs
litebox_runner_optee_on_linux_userland/src/: lib.rs  tests.rs
litebox_runner_snp/src/: main.rs
litebox_shim_linux/: Cargo.toml
litebox_shim_linux/src/: lib.rs
litebox_shim_linux/src/syscalls/: epoll.rs  file.rs  misc.rs  mm.rs  mod.rs  net.rs  pipe.rs  process.rs  tests.rs  unix.rs
litebox_shim_linux/src/syscalls/signal/: mod.rs  x86_64.rs
litebox_shim_optee/: Cargo.toml
litebox_shim_optee/src/: lib.rs  msg_handler.rs  session.rs
litebox_shim_optee/src/syscalls/: cryp.rs  ldelf.rs  pta.rs  tee.rs
litebox_syscall_rewriter/src/: lib.rs
litebox_syscall_rewriter/tests/: snapshot_tests.rs
sg_eval_vendor/lock_annotations/: Cargo.toml  README.md
sg_eval_vendor/lock_annotations/src/: lib.rs
sg_eval_vendor/lock_annotations/tests/: smoke.rs
