[workspace]
exclude = ["sg_eval_vendor"]
resolver = "2"
members = [
    "litebox", 
    "litebox_common_linux",
    "litebox_common_optee",
    "litebox_platform_linux_kernel",
    "litebox_platform_linux_userland",
    "litebox_platform_freebsd_userland",
    "litebox_platform_windows_userland",
    "litebox_platform_lvbs",
    "litebox_platform_multiplex",
    "litebox_runner_linux_userland",
    "litebox_runner_linux_on_windows_userland",
    "litebox_runner_lvbs",
    "litebox_runner_optee_on_linux_userland",
    "litebox_shim_linux",
    "litebox_syscall_rewriter",
    "litebox_runner_snp",
]
default-members = [
    "litebox",
    "litebox_common_linux",
    "litebox_common_optee",
    "litebox_platform_linux_kernel",
    "litebox_platform_linux_userland",
    "litebox_platform_freebsd_userland",
    "litebox_platform_windows_userland",
    "litebox_platform_lvbs",
    "litebox_platform_multiplex",
    "litebox_runner_linux_userland",
    "litebox_runner_linux_on_windows_userland",
    "litebox_shim_linux",
    "litebox_shim_optee",
    "litebox_syscall_rewriter"
]
# We exclude `litebox_runner_lvbs` from `default-members` because its interrupt handling
# depends on the unstable `abi_x86_interrupt` feature, which requires a nightly toolchain.
# Once this feature stabilizes, we can add `litebox_runner_lvbs` to `default-members`.

# Introduce all the pedantic clippy lints and remove ones I (jayb) think are
# pushing it too far; this way we get something even further than default clippy
# but not _too_ ridiculous.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
redundant_else = "allow"
must_use_candidate = "allow"
