[package]
name = "litebox"
version = "0.1.0"
edition = "2024"

[dependencies]
lock_annotations = { path = "../sg_eval_vendor/lock_annotations" }
arrayvec = { version = "0.7.6", default-features = false, optional = true }
bitflags = "2.6.0"
either = { version = "1.13.0", default-features = false }
hashbrown = "0.15.2"
smallvec = "1.13.2"
smoltcp = { version = "0.12.0", default-features = false, features = ["log", "proto-ipv4", "medium-ip", "socket", "socket-tcp", "socket-udp", "socket-icmp", "socket-raw", "alloc"] }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
tar-no-std = { version = "0.3.3", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.6", default-features = false }
rangemap = { version = "1.5.1", features = ["const_fn"] }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
buddy_system_allocator = { version = "0.11.0", default-features = false, features = ["use_spin"] }
# Depend on (currently unreleased) slabmalloc `main`, which contains some fixes on top of `0.11.0`
slabmalloc = { git = "https://github.com/gz/rust-slabmalloc.git", rev = "19480b2e82704210abafe575fb9699184c1be110" }

[features]
lock_tracing = ["dep:arrayvec", "spin/mutex"]
panic_on_unclosed_fd_drop = []

[lints]
workspace = true
