[package]
name = "litebox_platform_linux_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
getrandom = "0.3.4"
libc = { version = "0.2.169", default-features = false }
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }
litebox_common_optee = { path = "../litebox_common_optee", version = "0.1.0", default-features = false, optional = true }
spin = "0.9.8"
syscalls = { version = "0.6", default-features = false }
zerocopy = { version = "0.8", default-features = false }

[features]
default = ["linux_syscall"]
linux_syscall = []
optee_syscall = ["dep:litebox_common_optee"]
loom = ["litebox/loom"]

[lints]
workspace = true
