[package]
name = "litebox_runner_lvbs"
version = "0.1.0"
edition = "2024"

[dependencies]
lock_annotations = { path = "../sg_eval_vendor/lock_annotations" }
litebox = { version = "0.1.0", path = "../litebox" }
litebox_platform_lvbs = { version = "0.1.0", path = "../litebox_platform_lvbs", default-features = false }
litebox_platform_multiplex = { version = "0.1.0", path = "../litebox_platform_multiplex", default-features = false, features = ["platform_lvbs"] }
litebox_common_optee = { path = "../litebox_common_optee/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_shim_optee = { path = "../litebox_shim_optee/", version = "0.1.0" }
spin = { version = "0.10.0", default-features = false, features = ["spin_mutex"] }
once_cell = { version = "1.21.3", default-features = false, features = ["race", "alloc"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[lints]
workspace = true
