[package]
name = "litebox_shim_linux"
version = "0.1.0"
edition = "2024"

[dependencies]
lock_annotations = { path = "../sg_eval_vendor/lock_annotations" }
arrayvec = { version = "0.7.6", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0", default-features = false }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
elf = { version = "0.7.4", default-features = false }
elf_loader = { version = "0.12.0", default-features = false, features = [] }
thiserror = { version = "2.0.6", default-features = false }
syscalls = { version = "0.6", default-features = false }
seq-macro = "0.3"

[target.'cfg(target_arch = "x86")'.dependencies]
# ELF loader requires us to enable the `rel` dependency on 32-bit to work.
# Enabling it on 64-bit on the other hand is incorrect and would not work. Thus,
# we need to do it as a target-specific dependency.
#
# NOTE: We must keep this in sync with the version above.
elf_loader = { version = "0.12.0", default-features = false, features = ["rel"] }

[features]
default = ["platform_linux_userland"]
platform_linux_userland = ["litebox_platform_multiplex/platform_linux_userland_with_linux_syscall"]
platform_windows_userland = ["litebox_platform_multiplex/platform_windows_userland"]
platform_linux_snp = ["litebox_platform_multiplex/platform_linux_snp"]

[dev-dependencies]
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }

[lints]
workspace = true
