[package]
name = "litebox_shim_optee"
version = "0.1.0"
edition = "2024"

[dependencies]
lock_annotations = { path = "../vendor/lock_annotations" }
aes = { version = "0.7", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
ctr = { version = "0.8", default-features = false }
elf = { version = "0.8.0", default-features = false }
hashbrown = "0.15.2"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_common_optee = { path = "../litebox_common_optee/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0", default-features = false }
litebox_util_log = { version = "0.1.0", path = "../litebox_util_log" }
hmac = { version = "0.12", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
sha2 = { version = "0.10", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["spin_mutex", "once"] }
thiserror = { version = "2.0.6", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

[features]
default = ["platform_lvbs"]
platform_linux_userland = ["litebox_platform_multiplex/platform_linux_userland_with_optee_syscall"]
platform_lvbs = ["litebox_platform_multiplex/platform_lvbs_with_optee_syscall"]

[lints]
workspace = true

[dev-dependencies]
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0", default-features = false, features = ["platform_linux_userland_with_optee_syscall"] }
